@@ -1,3 +1,7 @@
+16 March 2010: Wouter
+	- Fix interface-automatic for OpenBSD: msg.controllen was too small,
+	  also assertions on ancillary data buffer.
+
 15 March 2010: Wouter
 	- unit test for util/regional.c.
 
